--- a/app.json
+++ b/app.json
@@ -27,10 +27,7 @@
   },
   "stack": "heroku-16",
   "addons": [
-    "heroku-postgresql",
-    "sendgrid",
-    "papertrail",
-    "sentry"
+    "heroku-postgresql"
   ],
   "buildpacks": [
     {
